add invul checker